--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.23.6"
+    "zod": "^3.23.6",
+    "build": "prisma generate && next build"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -83,4 +84,5 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
   }
+ 
 }
