--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.23.6",
-    "build": "prisma generate && next build"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "typescript": "^5",
